# stock_investment_assistant

./: .env  README.md  config.yaml  pyproject.toml  pyproject.toml.bak  stock_evaluation_prompt.md  stock_selection_prompt.md
docs/: development_plan.md  mermaid_usage_guide.md  project_overview.md  technical_spec.md  uv_usage_guide.md
docs/images/: 提案アーキテクチャ案.md
mcp-servers/mcp-webresearch-main/: README.md  package-lock.json  package.json  pnpm-lock.yaml
mcp-servers/yahoo-finance-mcp-main/: .pre-commit-config.yaml
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
src/: evaluator.py  mcp_agent.config.yaml  mcp_agent.py  optimizer.py
src/stock_investment_assistant.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
